adding backup repos

--- a/docker-compose/elastic/Dockerfile
+++ b/docker-compose/elastic/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 
-ARG CERT_ADD
-ARG NODE
+ARG PASSWORD=Test@1234
+ARG VERSION=7.17.1
 
 RUN export DEBIAN_FRONTEND=noninteractive  &&  apt update && \
     apt install -y  wget curl nano
@@ -10,7 +10,7 @@ RUN mkdir /usr/share/elasticsearch
 
 WORKDIR /usr/share/elasticsearch
 
-RUN wget -O /tmp/elasticsearch.tar.gz  https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.17.1-linux-x86_64.tar.gz
+RUN wget -O /tmp/elasticsearch.tar.gz  https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-$VERSION-linux-x86_64.tar.gz
 
 RUN tar -xzf /tmp/elasticsearch.tar.gz --strip-components=1
 
@@ -26,14 +26,14 @@ RUN groupadd elasticsearch && \
     adduser elasticsearch root
 
 
-COPY ./elasticsearch.yml  /usr/share/elasticsearch/config
+#COPY ./elasticsearch.yml  /usr/share/elasticsearch/config
  
 USER elasticsearch 
 
-RUN echo "Test@1234" | /usr/share/elasticsearch/bin/elasticsearch-keystore add -xf bootstrap.password
+RUN echo $PASSWORD | /usr/share/elasticsearch/bin/elasticsearch-keystore add -xf bootstrap.password
+
+COPY ./elasticsearch.yml  /usr/share/elasticsearch/config
 
 #RUN if [[ -z "$CERT_ADD" ]] ; new cert request is not demanded ; ./bin/elasticsearch-certutil cert --silent --pem --in /tmp/instances.yml -out certs/bundle.zip;; fi
 CMD ./bin/elasticsearch
-
-
 
