--- a/docker-compose/logstash/logstash.conf
+++ b/docker-compose/logstash/logstash.conf
@@ -18,6 +18,11 @@ filter {
 }
 output {
   elasticsearch {
-    hosts => ["localhost:9200"]
+    hosts => ["master:9200"]
+    user => elastic
+    password => "Test@1234"
+    ssl => true
+    cacert => '/usr/share/logstash/certs/ca/ca.crt'
   }
 }
+
