--- a/docker-compose/kibana/kibana.yml
+++ b/docker-compose/kibana/kibana.yml
@@ -5,7 +5,7 @@ elasticsearch.hosts: [ "https://master:9200" ]
 monitoring.ui.container.elasticsearch.enabled: true
 elasticsearch.ssl.certificateAuthorities: [ "./certs/ca/ca.crt" ]
 server.ssl.enabled: true
-server.ssl.certificate: ./certs/kibana-server/kibana-server.csr
-server.ssl.key: ./certs/kibana-server/kibana-server.key
+server.ssl.certificate: ./certs/kibana/ca/ca.crt
+server.ssl.key: ./certs/kibana/ca/ca.key
 elasticsearch.username: "elastic"
 elasticsearch.password: "Test@1234"
